Fix: Fix invisible text issue at pawssord type input

--- a/src/components/auths/AuthForm.css
+++ b/src/components/auths/AuthForm.css
@@ -65,6 +65,22 @@
 	font-size: 2rem !important;
 }
 
+.authForm-input-text {
+	padding: 1rem !important;
+	font-size: 2rem !important;
+}
+
+.authForm-input-pw {
+	padding: 1rem !important;
+	font-size: 2rem !important;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif !important;
+}
+.authForm-input-pw::placeholder {
+	font-family: "Binggrae", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif !important;
+}
+
 .authForm-btn {
 	margin-top: 0.5rem;
 	margin-bottom: 0.5rem;
