--- a/src/components/papers/Paper.css
+++ b/src/components/papers/Paper.css
@@ -27,6 +27,13 @@
 	width: 5rem !important;
 	text-align: center;
 	font-size: 1.7rem !important;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif !important;
+}
+
+.paper-form-code::placeholder {
+	font-family: "Binggrae", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif !important;
 }
 
 .paper-form-code-btn {
