--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,4 @@
 @font-face {
-	font-family: "ImcreSoojin";
-	src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.3/ImcreSoojin.woff")
-		format("woff");
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
 	font-family: "Binggrae";
 	src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Binggrae.woff")
 		format("woff");
